--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
         <div class="row">
             <div class="leftcolumn">
                 <div class="card post">
+                    <h2>Day 122: Brightclimb Pathway // Grimclimb Pathway (ZNR)</h2>
+                    <h5>Sketch Post, June 29, 2025</h5>
+                    <h4>Sketch: June 28, 2025</h4>
+                    <p>Sketch Time: 109-minutes</p>
+                    <p>2 MDFCs in a row? On my weekend of my wedding?</p>
+                    <p>(I drew today's & yesterday's sketches on Friday. We are having a lovely time eating lots of food.)</p>
+                    <img id="sketchDay122-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreid4r4odncewaqd7grfz4zcnqlqidjxklgmfmq2jrk2bud3ikis3t4@jpeg" height="200" alt="My sketch of Brightclimb Pathway after 58 minutes.">
+                    <h6>My sketch of Brightclimb Pathway after 58 minutes.</h6>
+                    <img id="sketchDay122-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreienyhoj3nmoco7hfvrnizldncyqbkzqnacdct4dxkt7t6qdgsdsg4@jpeg" height="200" alt="My sketch of Grimclimb Pathway after 51 minutes.">
+                    <h6>My sketch of Grimclimb Pathway after 51 minutes.</h6>
+                    <br>
+                    <img id="realDay122-1" class="sketchImage" src="https://cards.scryfall.io/large/front/d/2/d24c3d51-795d-4c01-a34a-3280fccd2d78.jpg?1669839386" height="200" alt="(Original Artist: Johannes Voss)"></img>
+                    <img id="realDay122-2" class="sketchImage" src="https://cards.scryfall.io/large/back/d/2/d24c3d51-795d-4c01-a34a-3280fccd2d78.jpg?1669839386" height="200" alt="(Original Artist: Johannes Voss)"></img>
+                    <h6>(Original Artist: Johannes Voss) <a href="https://scryfall.com/card/znr/259/brightclimb-pathway-grimclimb-pathway" target="_blank" title="Agadeem's Awakening // Agadeem, the Undercrypt">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsryfxegzc2d" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 121: Agadeem's Awakening // Agadeem, the Undercrypt (ZNR)</h2>
                     <h5>Sketch Post, June 28, 2025</h5>
                     <h4>Sketch: June 27, 2025</h4>
