--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">
                 <div class="card post">
+                    <h2>Day 123: Shimmerdrift Vale (KHM)</h2>
+                    <h5>Sketch Post, June 30, 2025</h5>
+                    <h4>Sketch: June 29, 2025</h4>
+                    <p>Sketch Time: 41-minutes</p>
+                    <p>When the temp feeling over 100, you gotta start missing the snow a bit.</p>
+                    <img id="sketchDay123" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibis2mywxmznhkwvowim2acrtxzy46zekjr32b2jbwev5zruagiga@jpeg" height="200" alt="My sketch of Shimmerdrift Vale after 41 minutes.">
+                    <h6>My sketch of Shimmerdrift Vale after 41 minutes.</h6>
+                    <br>
+                    <img id="realDay123" class="sketchImage" src="https://cards.scryfall.io/large/front/f/0/f09d98db-0176-41a7-b99b-ead29876cdab.jpg?1631053062" height="200" alt="(Original Artist: Titus Lunter)"></img>
+                    <h6>(Original Artist: Titus Lunter) <a href="https://scryfall.com/card/khm/267/shimmerdrift-vale" target="_blank" title="Shimmerdrift Vale">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3lsuidffapk2t" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 122: Brightclimb Pathway // Grimclimb Pathway (ZNR)</h2>
                     <h5>Sketch Post, June 29, 2025</h5>
                     <h4>Sketch: June 28, 2025</h4>
