--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">
                 <div class="card post">
+                    <h2>Day 124: Deserted Temple (MH3)</h2>
+                    <h5>Sketch Post, July 1, 2025</h5>
+                    <h4>Sketch: June 30, 2025</h4>
+                    <p>Sketch Time: 25-minutes</p>
+                    <p>This would be a nice Keyblade Graveyard alter, but I restrained myself and only added 1 keyblade.</p>
+                    <img id="sketchDay124" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreicc74esfvo4dode2jh7kzc3rvro7v5ylsexixksckmywhnmzv4qty@jpeg" height="200" alt="My sketch of Deserted Temple after 25 minutes.">
+                    <h6>My sketch of Deserted Temple after 25 minutes.</h6>
+                    <br>
+                    <img id="realDay124" class="sketchImage" src="https://cards.scryfall.io/large/front/f/d/fd51f8f0-779b-40bb-b65c-5907f816676e.jpg?1718220923" height="200" alt="(Original Artist: Rob Alexander)"></img>
+                    <h6>(Original Artist: Rob Alexander) <a href="https://scryfall.com/card/mh3/301/deserted-temple" target="_blank" title="Deserted Temple">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lswzkebq7s2d" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 123: Shimmerdrift Vale (KHM)</h2>
                     <h5>Sketch Post, June 30, 2025</h5>
                     <h4>Sketch: June 29, 2025</h4>
