--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">
                 <div class="card post">
+                    <h2>Day 125: Cactus Preserve (OTC)</h2>
+                    <h5>Sketch Post, July 2, 2025</h5>
+                    <h4>Sketch: July 1, 2025</h4>
+                    <p>Sketch Time: 42-minutes</p>
+                    <p>From what I've seen lorewise, this seems to be representing cactusfolk gaining sentience due to the omenpaths, which is why the power/toughness are dependent on your commanders' mana value.</p>
+                    <img id="sketchDay125" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihhcmtc6fibyj54i7je5yeqt6t742prit6qbhrr4lcvkwfxgh6qku@jpeg" height="200" alt="My sketch of Cactus Preserve after 42 minutes.">
+                    <h6>My sketch of Cactus Preserve after 42 minutes.</h6>
+                    <br>
+                    <img id="realDay125" class="sketchImage" src="https://cards.scryfall.io/large/front/a/d/ad9d426f-5870-42bb-a589-9218f7e35d62.jpg?1712353904" height="200" alt="(Original Artist: Jonas De Ro)"></img>
+                    <h6>(Original Artist: Jonas De Ro) <a href="https://scryfall.com/card/otc/40/cactus-preserve" target="_blank" title="Cactus Preserve">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lszhnenwc226" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 124: Deserted Temple (MH3)</h2>
                     <h5>Sketch Post, July 1, 2025</h5>
                     <h4>Sketch: June 30, 2025</h4>
