--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             </div>
         </div>
         <div class="row">
+            <div class="card post">
+                <h2>Day 126: Spara's Headquarters (SNC)</h2>
+                <h5>Sketch Post, July 3, 2025</h5>
+                <h4>Sketch: July 2, 2025</h4>
+                <p>Sketch Time: 86-minutes</p>
+                <p>It's lost because I don't sketch in color, but I do like how the art has a lot of green, white, and blue, which follows the mana colors the land produces.</p>
+                <img id="sketchDay126" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihbol73nse4bnoh4x4xf6ierixyduftpbuwvgratsdgdw4zeyxhmm@jpeg" height="200" alt="My sketch of Spara's Headquarters after 86 minutes.">
+                <h6>My sketch of Spara's Headquarters after 86 minutes.</h6>
+                <br>
+                <img id="realDay126" class="sketchImage" src="https://cards.scryfall.io/large/front/7/3/7363f1fb-9af3-4212-921f-d59533faf0e5.jpg?1664414585" height="200" alt="(Original Artist: Kieran Yanner)"></img>
+                <h6>(Original Artist: Kieran Yanner) <a href="https://scryfall.com/card/snc/257/sparas-headquarters" target="_blank" title="Spara's Headquarters">Scryfall Link</a></h6>
+                <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lt3yf5mzps26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+            </div>
             <div class="leftcolumn">
                 <div class="card post">
                     <h2>Day 125: Cactus Preserve (OTC)</h2>
