--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         </div>
         <div class="row">
             <div class="card post">
+                <h2>Day 127: Rhystic Cave (PCY)</h2>
+                <h5>Sketch Post, July 3, 2025</h5>
+                <h4>Sketch: July 3, 2025</h4>
+                <p>Sketch Time: 44-minutes</p>
+                <p>Fascinating card. You declare what color you want to produce, and then players have to decide to stop it before they know what you want to spend it on or if you are going to spend more mana.</p>
+                <img id="sketchDay127" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibdhphrspoj4l3aotiu77bevmpwf7neqrb5aphtr3cewgzvhsexsu@jpeg" height="200" alt="My sketch of Rhystic Cave after 44 minutes.">
+                <h6>My sketch of Rhystic Cave after 44 minutes.</h6>
+                <br>
+                <img id="realDay127" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4ae74463-4426-4ad4-b7a2-324694854245.jpg?1562908673" height="200" alt="(Original Artist: Rob Alexander)"></img>
+                <h6>(Original Artist: Rob Alexander) <a href="https://scryfall.com/card/pcy/142/rhystic-cave" target="_blank" title="Rhystic Cave">Scryfall Link</a></h6>
+                <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lt6nkwe5wk26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+            </div>
+            <div class="card post">
                 <h2>Day 126: Spara's Headquarters (SNC)</h2>
                 <h5>Sketch Post, July 3, 2025</h5>
                 <h4>Sketch: July 2, 2025</h4>
