--- a/index.html
+++ b/index.html
@@ -29,8 +29,21 @@
         </div>
         <div class="row">
             <div class="card post">
+                <h2>Day 128: Flamekin Village (CM2)</h2>
+                <h5>Sketch Post, July 5, 2025</h5>
+                <h4>Sketch: July 4, 2025</h4>
+                <p>Sketch Time: 65-minutes</p>
+                <p>Red and tap this land to give a creature haste seems like a great return. I always like abilities that could be used to give something beneficial to another player in multiplayer.</p>
+                <img id="sketchDay128" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibmufdach6qf23w2uyvue4f5k5hq2idxyh3ahlpx22er6m2fkmorq@jpeg" height="200" alt="My sketch of Flamekin Village after 65 minutes.">
+                <h6>My sketch of Flamekin Village after 65 minutes.</h6>
+                <br>
+                <img id="realDay128" class="sketchImage" src="https://cards.scryfall.io/large/front/0/f/0fe90c85-c9ef-4ceb-9dc3-4d428b4157d5.jpg?1562272414" height="200" alt="(Original Artist: Ron Spears)"></img>
+                <h6>(Original Artist: Ron Spears) <a href="https://scryfall.com/card/cm2/251/flamekin-village" target="_blank" title="Flamekin Village">Scryfall Link</a></h6>
+                <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltb25czagk2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+            </div>
+            <div class="card post">
                 <h2>Day 127: Rhystic Cave (PCY)</h2>
-                <h5>Sketch Post, July 3, 2025</h5>
+                <h5>Sketch Post, July 4, 2025</h5>
                 <h4>Sketch: July 3, 2025</h4>
                 <p>Sketch Time: 44-minutes</p>
                 <p>Fascinating card. You declare what color you want to produce, and then players have to decide to stop it before they know what you want to spend it on or if you are going to spend more mana.</p>
