--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         </div>
         <div class="row">
             <div class="card post">
+                <h2>Day 129: Icatian Store (5ED)</h2>
+                <h5>Sketch Post, July 6, 2025</h5>
+                <h4>Sketch: July 5, 2025</h4>
+                <p>Sketch Time: 52-minutes</p>
+                <p>Maybe Icatia fell because they never cached in on all those storage counters. Left their armor and weapons at home for a rainy day like how I horde healing items in a jrpg.</p>
+                <img id="sketchDay129" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihzfzcmnfh75zwhaqbvscmk6i7g5ce4pxap4xwl44enrhmbesit3i@jpeg" height="200" alt="My sketch of Icatian Store after 52 minutes.">
+                <h6>My sketch of Icatian Store after 52 minutes.</h6>
+                <br>
+                <img id="realDay129" class="sketchImage" src="https://cards.scryfall.io/large/front/e/6/e68c45d3-0f3c-4429-a93e-4ca70ea6b1a4.jpg?1562594495" height="200" alt="(Original Artist: David Seeley)"></img>
+                <h6>(Original Artist: David Seeley) <a href="https://scryfall.com/card/5ed/419/icatian-store" target="_blank" title=" Icatian Store">Scryfall Link</a></h6>
+                <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltdjlbroo22w" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+            </div>
+            <div class="card post">
                 <h2>Day 128: Flamekin Village (CM2)</h2>
                 <h5>Sketch Post, July 5, 2025</h5>
                 <h4>Sketch: July 4, 2025</h4>
