--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         </div>
         <div class="row">
             <div class="card post">
+                <h2>Day 130: Shineshadow Snarl (LCC)</h2>
+                <h5>Sketch Post, July 7, 2025</h5>
+                <h4>Sketch: July 6, 2025</h4>
+                <p>Sketch Time: 42-minutes</p>
+                <p>So, the enemy reveal lands are where opposing leylines met and birthed the Elder Dragons of Arcavios, and the allied reveal lands are... random locations in Innistrad?</p>
+                <img id="sketchDay130" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidpanfoxybgcyk52jt4n52jtjqwasz4epxmj2neqzjg3mfd66qcm4@jpeg" height="200" alt="My sketch of Shineshadow Snarl after 42 minutes.">
+                <h6>My sketch of Shineshadow Snarl after 42 minutes.</h6>
+                <br>
+                <img id="realDay130" class="sketchImage" src="https://cards.scryfall.io/large/front/3/d/3d483bcf-438a-499b-86a5-6357d718faf1.jpg?1698988623" height="200" alt="(Original Artist: Sam Burley)"></img>
+                <h6>(Original Artist: Sam Burley) <a href="https://scryfall.com/card/lcc/351/shineshadow-snarl" target="_blank" title="Shineshadow Snarl">Scryfall Link</a></h6>
+                <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltg24xwss22p" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+            </div>
+            <div class="card post">
                 <h2>Day 129: Icatian Store (5ED)</h2>
                 <h5>Sketch Post, July 6, 2025</h5>
                 <h4>Sketch: July 5, 2025</h4>
