--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         </div>
         <div class="row">
             <div class="card post">
+                <h2>Day 131: Riveteers Overlook (SNC)</h2>
+                <h5>Sketch Post, July 8, 2025</h5>
+                <h4>Sketch: July 7, 2025</h4>
+                <p>Sketch Time: 74-minutes</p>
+                <p>Why not hire flyers to help build skyscrapers?</p>
+                <img id="sketchDay131" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigyjqa2bqnlceqalafjc2c56qd5bwymrtrznuc5nnzxv6igvnaxwa@jpeg" height="200" alt="My sketch of Riveteers Overlook after 74 minutes.">
+                <h6>My sketch of Riveteers Overlook after 74 minutes.</h6>
+                <br>
+                <img id="realDay131" class="sketchImage" src="https://cards.scryfall.io/large/front/1/d/1d161f81-c01a-4c91-b025-52dcb1881638.jpg?1664414539" height="200" alt="(Original Artist: Lucas Staniec)"></img>
+                <h6>(Original Artist: Lucas Staniec) <a href="https://scryfall.com/card/snc/255/riveteers-overlook" target="_blank" title="Riveteers Overlook">Scryfall Link</a></h6>
+                <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltirmdahuk2s" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+            </div>
+            <div class="card post">
                 <h2>Day 130: Shineshadow Snarl (LCC)</h2>
                 <h5>Sketch Post, July 7, 2025</h5>
                 <h4>Sketch: July 6, 2025</h4>
