--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         </div>
         <div class="row">
             <div class="card post">
+                <h2>Day 132: Ravaged Highlands (ODY)</h2>
+                <h5>Sketch Post, July 9, 2025</h5>
+                <h4>Sketch: July 8, 2025</h4>
+                <p>Sketch Time: 46-minutes</p>
+                <p>Seems like a fair include in my 5-color deck when most of the pool is red.</p>
+                <img id="sketchDay132" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiggvybzpymyc2qafkaoyju74uu3vvdtnsgvomzg5m5wrfhmoabflq@jpeg" height="200" alt="My sketch of Ravaged Highlands after 46 minutes.">
+                <h6>My sketch of Ravaged Highlands after 46 minutes.</h6>
+                <br>
+                <img id="realDay132" class="sketchImage" src="https://cards.scryfall.io/large/front/b/b/bb60ffc9-4919-40f2-bdd6-07eee6abf37c.jpg?1562929993" height="200" alt="(Original Artist: David Martin)"></img>
+                <h6>(Original Artist: David Martin) <a href="https://scryfall.com/card/ody/324/ravaged-highlands" target="_blank" title="Ravaged Highlands">Scryfall Link</a></h6>
+                <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltl5mc7ar22x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+            </div>
+            <div class="card post">
                 <h2>Day 131: Riveteers Overlook (SNC)</h2>
                 <h5>Sketch Post, July 8, 2025</h5>
                 <h4>Sketch: July 7, 2025</h4>
