--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         </div>
         <div class="row">
             <div class="card post">
+                <h2>Day 133: Thriving Bluff (CLU)</h2>
+                <h5>Sketch Post, July 10, 2025</h5>
+                <h4>Sketch: July 9, 2025</h4>
+                <p>Sketch Time: 39-minutes</p>
+                <p>I like how each other mana color choice is represented through the scene surrounding the primarily red mountain. Clouds & petals, sky & sediment line, dark shadows, and trees & grass.</p>
+                <img id="sketchDay133" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifik4vwrpmdzi27uxqsjsxvzcnhgsughatebzokrexbqxvk4qtkr4@jpeg" height="200" alt="My sketch of Thriving Bluff after 39 minutes.">
+                <h6>My sketch of Thriving Bluff after 39 minutes.</h6>
+                <br>
+                <img id="realDay133" class="sketchImage" src="https://cards.scryfall.io/large/front/c/1/c1932fa3-12bb-46aa-854f-87e0977e09be.jpg?1706240287" height="200" alt="(Original Artist: Johannes Voss)"></img>
+                <h6>(Original Artist: Johannes Voss) <a href="https://scryfall.com/card/clu/249/thriving-bluff" target="_blank" title="Thriving Bluff">Scryfall Link</a></h6>
+                <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltnmm5xwlk2a" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+            </div>
+            <div class="card post">
                 <h2>Day 132: Ravaged Highlands (ODY)</h2>
                 <h5>Sketch Post, July 9, 2025</h5>
                 <h4>Sketch: July 8, 2025</h4>
