--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             </div>
         </div>
         <div class="row">
+            <div class="leftcolumn">
+                <div class="card post">
+                    <h2>Digital Art: Day 63's Maskwood Nexus</h2>
+                    <h5>Digital Art Post, July 11, 2025</h5>
+                    <h4>Digital Paint: June 1-7, 2025</h4>
+                    <p>Paint Time: 228-minutes</p>
+                    <p>With the final weeks of my scryfall/random project sketches underway, I'm hoping to not burn out and be able to digitally paint the 93... remaining cards...</p>
+                    <p>Maybe I'll finish by next year.🥲</p>
+                    <img id="digitalDay63" class="sketchImage" src="https://cdn.cara.app/production/posts/432745f2-e0a7-4f5e-9fb2-17a10f95f58f/sorocoroto-ixGqIeurPkuXhmskgE3Kl-Day63_MaskwoodNexus-protected-intensity-DEFAULT-V2.png" height="300" alt="My digital painting of Maskwood Nexus after 228 minutes.">
+                    <h6>My digital painting of Maskwood Nexus after 228 minutes.</h6>
+                    <br>
+                    <br><a target="_blank" href="https://cara.app/post/432745f2-e0a7-4f5e-9fb2-17a10f95f58f" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3ltpyj6zmfc2o" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
             <div class="card post">
                 <h2>Day 133: Thriving Bluff (CLU)</h2>
                 <h5>Sketch Post, July 10, 2025</h5>
@@ -132,7 +146,6 @@
                 <h6>(Original Artist: Kieran Yanner) <a href="https://scryfall.com/card/snc/257/sparas-headquarters" target="_blank" title="Spara's Headquarters">Scryfall Link</a></h6>
                 <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lt3yf5mzps26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
             </div>
-            <div class="leftcolumn">
                 <div class="card post">
                     <h2>Day 125: Cactus Preserve (OTC)</h2>
                     <h5>Sketch Post, July 2, 2025</h5>
