--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">
                 <div class="card post">
+                    <h2>Day 135: Blooming Marsh (OTJ)</h2>
+                    <h5>Sketch Post, July 12, 2025</h5>
+                    <h4>Sketch: July 11, 2025</h4>
+                    <p>Sketch Time: 49-minutes</p>
+                    <p>Do the Cactarantulas spin these webs or did normal spiders crawl through the Omenpaths? Because from what I've learned about Thunder Junction is that no fauna existed before the Omenpaths.</p>
+                    <img id="sketchDay135" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibletfkybjc2nxdvvikctach7m4smnxg7mcllqvz2b3q2zgsm4mfm@jpeg" height="200" alt="My sketch of Blooming Marsh after 49 minutes.">
+                    <h6>My sketch of Blooming Marsh after 49 minutes.</h6>
+                    <br>
+                    <img id="realDay135" class="sketchImage" src="https://cards.scryfall.io/large/front/8/6/861caabb-0573-4e94-8b03-342f90465064.jpg?1723149884" height="200" alt="(Original Artist: Yeong-Hao Han)"></img>
+                    <h6>(Original Artist: Yeong-Hao Han) <a href="https://scryfall.com/card/otj/266/blooming-marsh" target="_blank" title="Blooming Marsh">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltspm4pn7s2j" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 134: Elfhame Palace (C17)</h2>
                     <h5>Sketch Post, July 11, 2025</h5>
                     <h4>Sketch: July 10, 2025</h4>
