--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">
                 <div class="card post">
+                    <h2>Day 136: Hinterland Harbor (TDC)</h2>
+                    <h5>Sketch Post, July 13, 2025</h5>
+                    <h4>Sketch: July 12, 2025</h4>
+                    <p>Sketch Time: 62-minutes</p>
+                    <p>Sometimes you don't really notice something in the art until you read the flavor text.</p>
+                    <img id="sketchDay136" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreicb4j2fhlr6y4k45brbwu725zqw7i54mxkniad5elrb4epfvsjmsa@jpeg" height="200" alt="My sketch of Hinterland Harbor after 62 minutes.">
+                    <h6>My sketch of Hinterland Harbor after 62 minutes.</h6>
+                    <br>
+                    <img id="realDay136" class="sketchImage" src="https://cards.scryfall.io/large/front/3/e/3eb512f5-9782-4c49-9b6e-4e967e42408b.jpg?1743207610" height="200" alt="(Original Artist: Daniel Ljunggren)"></img>
+                    <h6>(Original Artist: Daniel Ljunggren) <a href="https://scryfall.com/card/tdc/371/hinterland-harbor" target="_blank" title="Hinterland Harbor">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltv5r3runk22" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 135: Blooming Marsh (OTJ)</h2>
                     <h5>Sketch Post, July 12, 2025</h5>
                     <h4>Sketch: July 11, 2025</h4>
