--- a/index.html
+++ b/index.html
@@ -28,7 +28,23 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">
+            <div class="leftcolumn">                
+                <div class="card post">
+                    <h2>Day 137: Stump Stomp // Burnwillow Clearing (MH3)</h2>
+                    <h5>Sketch Post, July 14, 2025</h5>
+                    <h4>Sketch: July 13, 2025</h4>
+                    <p>Sketch Time: 111-minutes</p>
+                    <p>This is one of my favorite MDFC art pairings in terms of flavor and mechanical story-telling.</p>
+                    <img id="sketchDay137-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibtfppwzdtnfbtushr4htjfkbshz5ej7hjod4d5yfa2hr2cj7xsdq@jpeg" height="200" alt="My sketch of Stump Stomp after 58 minutes.">
+                    <h6>My sketch of Stump Stomp after 58 minutes.</h6>
+                    <img id="sketchDay137-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigc326goa3gvuks5bzprcbokbh6kwh7nmulnauubsx54x2fyvm4e4@jpeg" height="200" alt="My sketch of Burnwillow Clearing after 53 minutes.">
+                    <h6>My sketch of Burnwillow Clearing after 53 minutes.</h6>
+                    <br>
+                    <img id="realDay137-1" class="sketchImage" src="https://cards.scryfall.io/large/front/4/9/49974246-0a3b-4ec9-b5ea-2a89df9bb0b5.jpg?1717013490" height="200" alt="(Original Artist: Johannes Voss)"></img>
+                    <img id="realDay137-2" class="sketchImage" src="https://cards.scryfall.io/large/back/4/9/49974246-0a3b-4ec9-b5ea-2a89df9bb0b5.jpg?1717013490" height="200" alt="(Original Artist: Johannes Voss)"></img>
+                    <h6>(Original Artist: Volkan Baǵa) <a href="https://scryfall.com/card/mh3/259/stump-stomp-burnwillow-clearing" target="_blank" title="Stump Stomp // Burnwillow Clearing">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltxneq574s2y" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">
                     <h2>Day 136: Hinterland Harbor (TDC)</h2>
                     <h5>Sketch Post, July 13, 2025</h5>
