--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">                
+            <div class="leftcolumn">  
+                <div class="card post">
+                    <h2>Day 138: Myriad Landscape (TDC)</h2>
+                    <h5>Sketch Post, July 15, 2025</h5>
+                    <h4>Sketch: July 14, 2025</h4>
+                    <p>Sketch Time: 46-minutes</p>
+                    <p>Another art using all 5 colors of magic to represent the card's ability to fetch basic lands. And I'm, of course, happy to have it in the random deck pool as fixing.</p>
+                    <img id="sketchDay138" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreicit5e3ywhcxquf66u5xzntiyhcn6xxiktuu37tjijudz223jxwom@jpeg" height="200" alt="My sketch of Myriad Landscape after 46 minutes.">
+                    <h6>My sketch of Myriad Landscape after 46 minutes.</h6>
+                    <br>
+                    <img id="realDay138" class="sketchImage" src="https://cards.scryfall.io/large/front/d/b/db073781-2610-4b3d-baa9-c1931893fe15.jpg?1743207665" height="200" alt="(Original Artist: Richard Wright)"></img>
+                    <h6>(Original Artist: Richard Wright) <a href="https://scryfall.com/card/tdc/380/myriad-landscape" target="_blank" title="Myriad Landscape">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lu2dbze43227" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>              
                 <div class="card post">
                     <h2>Day 137: Stump Stomp // Burnwillow Clearing (MH3)</h2>
                     <h5>Sketch Post, July 14, 2025</h5>
