--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 139: Molten Tributary (DMU)</h2>
+                    <h5>Sketch Post, July 16, 2025</h5>
+                    <h4>Sketch: July 15, 2025</h4>
+                    <p>Sketch Time: 45-minutes</p>
+                    <p>Took me a second to notice the ship in the background, but I'm guessing that's the mages referenced in the flavor text.</p>
+                    <img id="sketchDay139" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifqe4nobnjg5d6tyw4xktdmzzdpkgjr7kiadvl745ecevvm4yscke@jpeg" height="200" alt="My sketch of Molten Tributary after 45 minutes.">
+                    <h6>My sketch of Molten Tributary after 45 minutes.</h6>
+                    <br>
+                    <img id="realDay139" class="sketchImage" src="https://cards.scryfall.io/large/front/2/0/20aff4af-5128-432f-a8c8-65b6909d31ac.jpg?1673308337" height="200" alt="(Original Artist: Yeong-Hao Han)"></img>
+                    <h6>(Original Artist: Yeong-Hao Han) <a href="https://scryfall.com/card/dmu/251/molten-tributary" target="_blank" title="Molten Tributary">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lu4pgpggbc2h" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 138: Myriad Landscape (TDC)</h2>
                     <h5>Sketch Post, July 15, 2025</h5>
                     <h4>Sketch: July 14, 2025</h4>
