--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 140: Cascade Bluffs (TDC)</h2>
+                    <h5>Sketch Post, July 17, 2025</h5>
+                    <h4>Sketch: July 16, 2025</h4>
+                    <p>Sketch Time: 44-minutes</p>
+                    <p>Limited with greyscale, but I think I got vibe with negative space and a bit of smudging.</p>
+                    <img id="sketchDay140" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreienvagf3mpbadcgzslttspmiltamkkbnlwe64z7a7da4czsekabei@jpeg" height="200" alt="My sketch of Cascade Bluffs after 44 minutes.">
+                    <h6>My sketch of Cascade Bluffs after 44 minutes.</h6>
+                    <br>
+                    <img id="realDay140" class="sketchImage" src="https://cards.scryfall.io/large/front/5/1/51e0191b-9cd3-466c-8ff8-94c7872746f5.jpg?1743207460" height="200" alt="(Original Artist: Brandon Kitkouski)"></img>
+                    <h6>(Original Artist: Brandon Kitkouski) <a href="https://scryfall.com/card/tdc/345/cascade-bluffs" target="_blank" title="Cascade Bluffs">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lu7dcqasjc2h" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 139: Molten Tributary (DMU)</h2>
                     <h5>Sketch Post, July 16, 2025</h5>
                     <h4>Sketch: July 15, 2025</h4>
