--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 141: Great Hall of Starnheim (KHM)</h2>
+                    <h5>Sketch Post, July 18, 2025</h5>
+                    <h4>Sketch: July 17, 2025</h4>
+                    <p>Sketch Time: 38-minutes</p>
+                    <p>This def came out better than I thought it would on screen compared to just looking at my sketch in person.</p>
+                    <img id="sketchDay141" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidsp4gzteqzuvckqg6vt4ywvzqicqkncdrnopbabuspd7b5whigu4@jpeg" height="200" alt="My sketch of Great Hall of Starnheim after 38 minutes.">
+                    <h6>My sketch of Great Hall of Starnheim after 38 minutes.</h6>
+                    <br>
+                    <img id="realDay141" class="sketchImage" src="https://cards.scryfall.io/large/front/a/2/a23c757e-5944-47ce-b06f-27b4c403044c.jpg?1631052822" height="200" alt="(Original Artist: Jonas De Ro)"></img>
+                    <h6>(Original Artist: Jonas De Ro) <a href="https://scryfall.com/card/khm/259/great-hall-of-starnheim" target="_blank" title="Great Hall of Starnheim">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lubr242xpc2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 140: Cascade Bluffs (TDC)</h2>
                     <h5>Sketch Post, July 17, 2025</h5>
                     <h4>Sketch: July 16, 2025</h4>
