--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 142: Tranquil Landscape (MH3)</h2>
+                    <h5>Sketch Post, July 19, 2025</h5>
+                    <h4>Sketch: July 18, 2025</h4>
+                    <p>Sketch Time: 54-minutes</p>
+                    <p>I do be loving when the art's colors match the pips in the card design. The greys in the clouds/reflections even work for the colorless pip.</p>
+                    <img id="sketchDay142" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiclvuwir2hj75tupjrnxvuy477iq5r6umjwonxcv55empwnx4f7ei@jpeg" height="200" alt="My sketch of Tranquil Landscape after 54 minutes.">
+                    <h6>My sketch of Tranquil Landscape after 54 minutes.</h6>
+                    <br>
+                    <img id="realDay142" class="sketchImage" src="https://cards.scryfall.io/large/front/1/1/113f48b9-a972-4e2c-af95-05ab078e01f2.jpg?1717013071" height="200" alt="(Original Artist: Randy Gallegos)"></img>
+                    <h6>(Original Artist: Randy Gallegos) <a href="https://scryfall.com/card/mh3/231/tranquil-landscape" target="_blank" title="Tranquil Landscape">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lueedvlq5k2q" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 141: Great Hall of Starnheim (KHM)</h2>
                     <h5>Sketch Post, July 18, 2025</h5>
                     <h4>Sketch: July 17, 2025</h4>
