--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 143: Rogue's Passage (FDN)</h2>
+                    <h5>Sketch Post, July 20, 2025</h5>
+                    <h4>Sketch: July 19, 2025</h4>
+                    <p>Sketch Time: 55-minutes</p>
+                    <p>It was only when I started shading that I noticed that there was a spotlight looking for the thief in the artwork.</p>
+                    <img id="sketchDay143" class="sketchImage" src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihzdany6j755m5q6gzhgy7h6odeell25ckeljqit4dzf5orhezbmi@jpeg" height="200" alt="My sketch of Rogue's Passage after 55 minutes.">
+                    <h6>My sketch of Rogue's Passage after 55 minutes.</h6>
+                    <br>
+                    <img id="realDay143" class="sketchImage" src="https://cards.scryfall.io/large/front/a/2/a2a424ea-ef32-4ac5-8f8c-3ea1839f01d4.jpg?1730489588" height="200" alt="(Original Artist: Christine Choi)"></img>
+                    <h6>(Original Artist: Christine Choi) <a href="https://scryfall.com/card/rtr/245/rogues-passage" target="_blank" title="Rogue's Passage">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lugs6vgmxc2n" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 142: Tranquil Landscape (MH3)</h2>
                     <h5>Sketch Post, July 19, 2025</h5>
                     <h4>Sketch: July 18, 2025</h4>
